src/objects/Brand__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Abbreviation_Text_1__c</fullName>
        <label>Abbreviation Text 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abbreviation_Text_2__c</fullName>
        <label>Abbreviation Text 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name_1__c</fullName>
        <label>Brand Name 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name_2__c</fullName>
        <label>Brand Name 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Telephone_Text_1__c</fullName>
        <label>CC Telephone Text 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Telephone_Text_2__c</fullName>
        <label>CC Telephone Text 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Helpdesk_Telephone_Brand_1__c</fullName>
        <label>RE Helpdesk Telephone Brand 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Helpdesk_Telephone_Brand_2__c</fullName>
        <label>RE Helpdesk Telephone Brand 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Brand</label>
</CustomObject>